--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"dependencies": {
 		"axios": "1.4.0",
-		"cookiejar": "2.1.4"
+		"cookiejar": "2.1.4",
+		"https-proxy-agent": "^7.0.2"
 	}
 }
