--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"axios": "1.4.0",
 		"cookiejar": "2.1.4",
-		"https-proxy-agent": "^7.0.2"
+		"https-proxy-agent": "^7.0.2",
+		"socks-proxy-agent": "^8.0.2"
 	}
 }
